# Spider

./: .gitignore  README.md  evaluator.modelfile  mutation_engine.py  mutator.modelfile  planner.modelfile  planner.py  pyproject.toml  rag_retriever.py  spider_planner.py  spider_retriever.py  test_mutation.py  test_planner.py  test_retriever.py
.github/: copilot-instructions.md
configs/: executor_config.json  index_config.json  planner_config.json  retriever_config.json
rag/taxonomy/: categories.json
scripts/: __init__.py
scripts/dataset_pipeline/: __init__.py  dataset_intelligence_builder.py  dedupe_and_label.py  extract_all_prompts.py  filter_injection_prompts.py
scripts/vector_index_builder/: __init__.py  build_vector_index.py
spider/: __init__.py  __main__.py  main.py
spider/attack_loop/: __init__.py  controller.py  state.py  termination.py
spider/config/: __init__.py
spider/core/: __init__.py  ollama_models.py  pipeline.py
spider/evaluator/: __init__.py  evaluator.py  llm_judge.py  patterns.py  scoring.py
spider/executor/: __init__.py  adapter_types.py  executor.py  openai_adapter.py  rest_adapter.py  session.py
spider/reporting/: __init__.py  exporters.py  report_generator.py  severity.py  templates.py
spider/ui/: __init__.py  (+7 more)
tests/: test_attack_loop_controller.py  test_build_vector_index.py  test_dataset_intelligence_builder.py  test_evaluator_engine.py  test_executor_connectors.py  test_reporting_engine.py  test_runtime_models.py  test_spider_retriever.py  test_strategy_memory.py  test_ui_backend_bridge.py  test_ui_layout_helpers.py
(+1 files in other folders)
