[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spider"
version = "0.1.0"
description = "SPIDER - Prompt Injection AI Agent for bug bounty workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "SPIDER Team" }
]
keywords = ["cybersecurity", "prompt-injection", "llm", "cli", "bug-bounty"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=0.47.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
spider = "spider.main:main"

[tool.hatch.build.targets.wheel]
packages = ["spider"]
